--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,9 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Login</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -14,7 +11,7 @@
       <ion-row>
         <ion-col>
           <ion-item style="padding-left:0px;">
-            <ion-input type="number" [(ngModel)]="user.mail" name="mail" placeholder="Email ID" required></ion-input>
+            <ion-input type="text" [(ngModel)]="user.mail" name="mail" placeholder="Email ID" required></ion-input>
           </ion-item>
 
           <ion-item style="padding-left:0px;">
@@ -29,7 +26,7 @@
       </ion-row>
       <ion-row>
         <ion-col width-50>
-          <button ion-button (click)="signUp()" clear>Sign Up</button>
+          <button ion-button (click)="goToSignUp()" clear>Sign Up</button>
         </ion-col>
         <ion-col wodth-33 offset-20>
           <button ion-button (click)="setAdminTrue()" clear>Login as Admin</button>
